--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-**/.idea
-**/node_modules
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
 
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+
+.env
+db.sqlite3
